--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,10 +4,10 @@
   <!-- Copyright -->
   <ul class="copyright">
     {% if site.title or site.author %}
-      <li>&copy; {{- site.title | default: site.author -}}. All rights reserved.</li>
+      <li>&copy; {{ site.time | date: '%Y' }}  {{ site.title | default: site.author }}. All rights reserved.</li>
     {% endif %}
     <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-    <li>Jekyll integration: <a href="https://chrisbobbe.github.io/">Chris Bobbe</a></li>
+    <li>Powered by <a href="https://jekyllrb.com/">Jekyll</a></li>
   </ul>
   
 </div>
