--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-{%- include header.html -%}
+{%- include header.html photo=_page.cover-photo photo-alt=_page.cover-photo-alt -%}
 
 <!-- Main -->
 <div id="main">
