--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,23 @@ layout: default
 
 
 <!-- Main -->
+<!--
+<div id="main">
+-->
+	<!-- Page -->
+<!--
+	<article class="shade-two">
+	  <div class="container">
+			<header>
+				<h2>{{- page.title -}}</h2>
+				{%- if page.subtitle -%}<p>{{- page.subtitle -}}</p>{%- endif -%}
+			</header>
+	    {{- content -}}
+	  </div>
+	</article>
+</div>
+-->
+
 <div id="main">
 	<!-- Page -->
 	<article class="shade-two">
@@ -13,7 +30,9 @@ layout: default
 				<h2>{{- page.title -}}</h2>
 				{%- if page.subtitle -%}<p>{{- page.subtitle -}}</p>{%- endif -%}
 			</header>
+		  <body background="{{- page.cover-photo -}}">
 	    {{- content -}}
+		  </body>
 	  </div>
 	</article>
 </div>
