--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 ---
-
-
+{%- include header.html -%}
 
 <!-- Main -->
 <div id="main">
@@ -16,6 +15,5 @@ layout: default
 	    {{- content -}}
 	  </div>
 	</article>
-	{%- include section.html title=_title subtitle=_subtitle content=_content photo=_page.cover-photo photo-alt=_page.cover-photo-alt -%}
 </div>
 
